<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5sp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:text="@string/nombre"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eNombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName"
            android:textSize="20sp" />

    </LinearLayout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rbmasculino" />

        <RadioButton android:id="@+id/radio_femenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rbfemenino" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:text="@string/correo"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/eCorreo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_correo"
            android:inputType="textEmailAddress"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:text="@string/tel"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/eTel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_tel"
            android:inputType="phone"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/tbotonfecha"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:onClick="setDate"
        android:text="Ingresar fecha de nacimiento" />

    <Spinner
        android:id="@+id/spinnerf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"
            android:text="Fútbol" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"
            android:text="Voleibol" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"
            android:text="Natación" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"
            android:text="Basketball" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="184dp"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tsex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tcity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tdeporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deporte"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="76dp"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/boton"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/boton"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>